--- a/src/app/scrollbar/scrollbar.component.scss
+++ b/src/app/scrollbar/scrollbar.component.scss
@@ -4,7 +4,7 @@
   position: relative;
   display: block;
   width: 100%;
-  height: calc(100vh - 64px);
+  height: 100%;
 }
 
 ng-scrollbar {
