--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -3,6 +3,12 @@
 :host {
   position: relative;
   display: block;
+
+  ::ng-deep {
+    .ng-scroll-view {
+      height: calc(100vh - 64px) !important;
+    }
+  }
 }
 
 .__sidebar {
@@ -27,10 +33,10 @@
 .__buttons {
   flex: 0;
   display: flex;
-  padding: .5rem;
+  padding: 0.5rem;
 
   button {
-    margin: .5rem;
+    margin: 0.5rem;
     flex: 1;
     box-shadow: none;
     border-radius: $border-radius / 2;
